--- a/.github/workflows/ISSUE_CREATION_WORKFLOW.yml
+++ b/.github/workflows/ISSUE_CREATION_WORKFLOW.yml
@@ -5,6 +5,26 @@
 
 name: Weekly Team Sync
 on:
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning' 
+        type: choice
+        options:
+        - info
+        - warning
+        - debug 
+      tags:
+        description: 'Test scenario tags'
+        required: false 
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true 
+    
   schedule:
     - cron: 0 12 * * 4
 
